tests/baselines/reference/parserErrorRecovery_SourceUnit1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/SourceUnits/parserErrorRecovery_SourceUnit1.ts(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/SourceUnits/parserErrorRecovery_SourceUnit1.ts (1 errors) ====
    class C {
    }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    class D {
    }